<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearAlumnoActivity">

    <LinearLayout
        android:id="@+id/MainNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nav_color"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- Titulo de la actividad -->
        <TextView
            android:id="@+id/SchoolNavLogo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:gravity="center"
            app:tint="@color/white"
            android:text="@string/add_alumno_nav_title" />
    </LinearLayout>

    <!-- Input para la imagen -->
    <!--<ImageView
        android:id="@+id/ivImagen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:background="@color/light"
        android:contentDescription="@string/cargar_imagen"
        android:enabled="false"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <!-- Input del nombre -->
    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:theme="@style/EditTextTheme"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MainNav"/>

    <!-- Input del apellido -->
    <EditText
        android:id="@+id/etApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/apellido"
        android:layout_margin="16dp"
        android:theme="@style/EditTextTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre"/>

    <!-- Input de la fecha de nacimiento -->
    <EditText
        android:id="@+id/etFechaNacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_nacimiento"
        android:focusable="false"
        android:theme="@style/EditTextTheme"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etApellido"/>

    <!-- Input del curso -->
    <EditText
        android:id="@+id/etCurso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/curso"
        android:theme="@style/EditTextTheme"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFechaNacimiento"/>

    <EditText
        android:id="@+id/etImagenURL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_alumno_url_imagen_hint"
        android:theme="@style/EditTextTheme"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCurso"/>


    <!-- Botón de guardar -->
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/add_student"
        android:background="@drawable/button_default"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etImagenURL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>