<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/MainNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nav_color"
            android:padding="5dp">

            <ImageView
                android:id="@+id/SchoolNavLogo"
                android:layout_width="108dp"
                android:layout_height="100dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/nav_logo_description"
                android:foregroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logoescuela"
                app:tint="@color/white"
                tools:srcCompat="@drawable/logoescuela" />

            <ImageView
                android:id="@+id/logoutBtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/log_out_svc_icon_img_description"
                android:padding="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logout"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/MainContentScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/MainContentScrollLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="30dp"
                android:paddingRight="30dp">

                <LinearLayout
                    android:id="@+id/CardAlumnos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/alumnos_card_image_description"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/alumnos"
                        tools:srcCompat="@drawable/alumnos" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/progress_color"
                        android:padding="15dp"
                        android:text="@string/alumnos_card_text_label"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/CardCursos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/cursos_card_image_description"
                        android:scaleType="center"
                        app:srcCompat="@drawable/istockphoto_1415740411_612x612"
                        tools:srcCompat="@drawable/istockphoto_1415740411_612x612" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/progress_color"
                        android:padding="15dp"
                        android:text="@string/cursos_card_text_label"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/CardPersonalDocente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/personal_docente_card_image_description"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/teacher"
                        tools:srcCompat="@drawable/teacher" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/progress_color"
                        android:padding="15dp"
                        android:text="@string/personal_docente_card_text_label"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>